netplan on clients

--- a/strongswan_playbook.yml
+++ b/strongswan_playbook.yml
@@ -69,7 +69,7 @@
         name: ipsec
         state: restarted
 
-- name: clients
+- name: Add routes to remote subnet on clients machines
   hosts: clients
   tasks:
     - name: Capturing Existing netplan Configurations files list
@@ -86,12 +86,12 @@
         netplan_config_file_content: "{{ remote_content_encoded.content | b64decode | from_yaml }}"
     - name: modify netplan config file content
       set_fact:
-        netplan_config_file_content: "{{ netplan_config_file_content | default({}) | combine({'network': {'ethernets': {'eth1': {'routes': route_to_add_on_clients }}}}, recursive=true) }}"
+        netplan_config_file_content: "{{ netplan_config_file_content | default({}) | combine({'network': {'ethernets': {private_interface: {'routes': route_to_add_on_clients }}}}, recursive=true) }}"
       vars:
         route_to_add_on_clients: [{"to": "{{remote_subnet}}", "via": "{{ hostvars['local_gateway']['private_ip'] }}"}]
     - name: get hostvars
       copy:
-        content: "{{ netplan_config_file_content | to_yaml }}"
+        content: "{{ netplan_config_file_content | to_nice_yaml }}"
         dest: "/root/netplan_test.yaml"
     #   shell:
     #     cmd: ip route add {{ remote_subnet }} via {{ hostvars['local_gateway']['private_ip'] }} dev {{ private_interface }} src {{ private_ip }}
