--- a/strongswan_playbook.yml
+++ b/strongswan_playbook.yml
@@ -70,7 +70,7 @@
         paths: /etc/netplan
         patterns: "*.yml,*.yaml"
       register: _netplan_configs
-    - name: get netplan config content
+    - name: get netplan config file content
       slurp:
         src: "{{_netplan_configs['files'][0]['path']}}"
       register: remote_content_encoded
